# em

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: run-tests.yml
src/: main.cpp
src/em/: EmLang.cpp  EmLang.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
src/em/ast/: Node.h  NodeVisitor.h  Program.cpp  Program.h
src/em/ast/exprs/: AssignmentExpression.cpp  AssignmentExpression.h  Expression.h  FunctionCall.cpp  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  GroupExpression.cpp  GroupExpression.h  LiteralExpression.cpp  LiteralExpression.h  MaterialSetExpression.cpp  MaterialSetExpression.h  OperatorExpression.cpp  OperatorExpression.h  SetExpression.cpp  SetExpression.h  VariableExpression.cpp  VariableExpression.h  VirtualSetExpression.cpp  VirtualSetExpression.h
src/em/ast/stmts/: ExpressionStatement.cpp  ExpressionStatement.h  Statement.h
src/em/runtime/: Interpreter.cpp  Interpreter.h
src/em/utils/: AstTreeDiagramGenerator.cpp  AstTreeDiagramGenerator.h  FileUtils.h  PrintVisitor.cpp  PrintVisitor.h  StringUtils.h
src/em/values/: LiteralValue.h  MaterialSetValue.cpp  MaterialSetValue.h  Value.cpp  Value.h  VirtualSetValue.cpp  VirtualSetValue.h
src/em/values/functions/: Function.cpp  Function.h  NativeFunction.cpp  NativeFunction.h  ProgramFunction.cpp  ProgramFunction.h
src/em/values/sets/: MaterialSetValue.cpp  MaterialSetValue.h  Set.cpp  Set.h  VirtualSetValue.cpp  VirtualSetValue.h
test/: CMakeLists.txt
test/snapshot/EmLang/: main.cpp
test/snapshot/EmLang/snapshots/function/: expected_output.txt  program.em
test/snapshot/EmLang/snapshots/set_equality/: expected_output.txt  program.em
test/snapshot/EmLang/snapshots/set_intersection/: expected_output.txt  program.em
test/snapshot/EmLang/snapshots/set_union/: expected_output.txt  program.em
test/snapshot/EmLang/snapshots/virtual_set/: expected_output.txt  program.em
test/utils/: TestUtils.h
